--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21687,6 +21687,11 @@ a.heading-anchor:visited,
 /**
  * Headers
  */
+.toc-level-2,
+.toc-level-3 {
+  overflow-wrap: break-word;
+}
+
 .toc-level-2 a::before,
 .toc-level-3 a::before {
   content: "#";
